Implement load/save system, add Pause screen, and rework code structure
In this commit, I've implemented a load/save system, which will allow players to save their progress in the game and resume play at a later time. I've also added a Pause screen, which will allow players to pause the game and choose to load, resume or go back to main game screen.

Additionally, I've reworked the code structure to improve the organization and maintainability of the codebase. This includes restructuring the package hierarchy, refactoring some code to use more modular and reusable components, and updating the JavaDocs to reflect the changes.

--- a/src/docs/TODO.txt
+++ b/src/docs/TODO.txt
@@ -2,4 +2,12 @@
  *  Load Capability
  *  Save Capability
  *  Add, 2048 game using the framework
+ *  LevelReader very inefficient as it loads from the file each level pass
+    - Should keep a few levels in memory instead for increased performance.
  *  Add JUnit testings
+ *  Restructure the code for AudioObserver to go with GameObserver, Look into Strategy part of the pattern for this.
+
+Bugs
+ *  Load works different from StartMenu and PauseMenu?
+    Even if no file is found will load you into a position?
+    - Event due to level is incrementing on load!
