Add Restart function to Framework and fix bugs in Sokoban game
In this commit, I've added a Restart function to the Framework, which will allow players to restart the game without having to reload the entire game. This should improve the user experience and make the game more convenient to play.

I've also fixed several bugs in the Sokoban game, including an issue with the Load/Save function, which was not working correctly, and a bug with the Resume Game function, which was causing a wierd GLITCH IN THE MATRIX.

Signed-off-by: Thomas <dommyhelp@gmail.com>

--- a/src/docs/TODO.txt
+++ b/src/docs/TODO.txt
@@ -1,8 +1,25 @@
- Requirements left
- *  Add, 2048 game using the framework
- *  Add JUnit testings
+Framework
+  - Requirements left
+   *  Add JUnit testings
+  - Bugs
 
-Wants
- *  Restructure the code for AudioObserver to go with GameObserver, Look into Strategy part of the pattern for this.
- *  LevelReader very inefficient as it loads from the file each level pass
-    - Should keep a few levels in memory instead for increased performance.
+  - Future
+   *  Restructure the code for AudioObserver to go with GameObserver, Look into Strategy part of the pattern for this.
+   *  LevelReader very inefficient as it loads from the file each level pass
+      - Should keep a few levels in memory instead for increased performance.
+Sokoban
+  - Requirements left
+   *  Add JUnit testings
+
+  - Bugs
+   * Fix Tilesize when switching from
+
+2048
+
+  - Requirements left
+   *  Add, 2048 game using the framework
+   *  Add JUnit testings
+  - Bugs
+
+
+
